--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Todo List</title>
-    <!-- FAVICON -->
+   
     <link rel="icon" href="img/icon.png">
 
      <!-- FONT AWESOME CDN -->
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
   <body>
-
+     
+            <!--TODO LIST CARD-->
     <section class="p-5">
         <div class="row">
            <div class="col-lg-6 offset-lg-3">
@@ -62,7 +63,7 @@
      </section>
   
 
-
+            <!--FOOTER SECTION-->
      <footer class="footer-section">    
         <div class="container-fluid">
          <img class="img-fluid footer-img" src="img/logo1.png" data-aos="zoom-in-down"><br>
@@ -91,9 +92,10 @@
 </div>
 </footer>
 
-
+   <!-- EXTERNAL JS -->
     <script src="js/script.js"></script>
     <!-- JAVASCRIPT BUNDLE WITH POPPER.JS  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-popRpmFF9JQgExhfw5tZT4I9/CI5e2QcuUZPOVXb1m7qUmeR2b50u+YFEYe1wgzy" crossorigin="anonymous"></script>
-</body>
+
+   </body>
 </html>
