--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <title>Todo List</title>
    
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" type="image/png" href="img/icon.png">
 
      <!-- FONT AWESOME CDN -->
      <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
