--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <title>Todo List</title>
    
-    <link rel="icon" type="image/png" href="img/icon.png">
+    <link rel="icon" href="img/icon.png">
 
      <!-- FONT AWESOME CDN -->
      <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -30,7 +30,7 @@
                  </div>
                  <div class="card-body">
                     <div class="sticky-section pb-1">
-                       <h5>Todo list</h5>
+                       <h5>What I need to do?</h5>
                        <form class="addTask-form">
                           <div class="form-group">
                              <div class="input-group">
@@ -44,18 +44,14 @@
                                 <div class="input-group-append">
                                   <input type="submit" class="btn btn-info" value="Save Task(s)">
                                </div>
-  
                              </div>
                           </div>
-                          <ul class="todo-list list-group list-group-flush">
-  
-                          </ul>
                        </form>
                        <hr>
                     <ul class="todo-list list-group list-group-flush">
   
                     </ul>
-                    <button id="clear" class="btn-clear btn btn-dark mt-1 d-block ml-auto">Clear tasks</button>
+                    <button id="clear" onclick="confirm('Are you sure you wanna clear all todos?');return false;" class="btn-clear btn btn-dark mt-1 d-block ml-auto">Clear task(s)</button>
                  </div>
               </div>
            </div>
