--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -51,8 +50,8 @@
                     <ul class="todo-list list-group list-group-flush">
   
                     </ul>
-                    <button id="clear" onclick="confirm('Are you sure you wanna clear all todos?');return false;" class="btn-clear btn btn-dark mt-1 d-block ml-auto">Clear task(s)</button>
-                 </div>
+                    <button id="clear" class="btn-clear btn btn-dark mt-1 d-block ml-auto">Clear task(s)</button>
+                 </div> <!--onclick="confirm('Are you sure you wanna clear all todos?');return false;"-->
               </div>
            </div>
         </div>
